# yolcat

./: .gitignore  README.md  detect.py  train.py  yolact.py
data/: ModifyLabel.py  coco.py  config.py  convertBackground2Label.py  detectRes2Label.py  json_to_dataset.py  labelme2coco.py  moveErrData.py
inference/: README.md  convert2Onnx.py  mergeBN.py  yolact_.py
inference/C++/: CMakeLists.txt  main.cpp  yolact.cpp  yolact.h
inference/C++/cv/: main.cpp  yolact.cpp
inference/C++/ncnn/: CMakeLists.txt  seg.cpp  seg.h  testNcnn.cpp
layers/: output_utils.py
layers/functions/: detection.py
layers/modules/: multibox_loss.py
utils/: augmentations.py  timer.py
